--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.main.MainActivity" />
+
         <service android:name=".service.TadoService" />
     </application>
 </manifest>
