--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.security:security-crypto:1.1.0-alpha05"
+
+    // Android Jetpack
+
+        // Lifecycle
+        implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+        implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+        implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExtVersion"
 
     // Dagger 2
     api "com.google.dagger:dagger:$daggerVersion"
