--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,12 @@ dependencies {
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation project(":test")
+    testImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation "org.mockito:mockito-core:4.11.0"
+    testImplementation 'org.robolectric:robolectric:4.9.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
