--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug { testCoverageEnabled true }
     }
 
     buildFeatures { viewBinding true }
+
+    testOptions {
+        unitTests { includeAndroidResources = true }
+    }
 }
 
 dependencies {
@@ -65,11 +71,12 @@ dependencies {
 
     testImplementation project(":test")
     testImplementation 'androidx.test:core:1.5.0'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation "org.mockito:mockito-core:4.11.0"
     testImplementation 'org.robolectric:robolectric:4.9.2'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'com.adevinta.android:barista:4.3.0'
 }
