--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ apply from : '../constants.gradle'
 
 android {
     namespace 'org.n27.tado'
-    compileSdk 33
+    compileSdk sdkV
 
     defaultConfig {
         applicationId "org.n27.tado"
-        minSdk 26
-        targetSdk 33
+        minSdk minSdkV
+        targetSdk sdkV
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -70,7 +70,6 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
 
     testImplementation project(":test")
-    testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation "org.mockito:mockito-core:4.11.0"
     testImplementation 'org.robolectric:robolectric:4.9.2'
