--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,40 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'jacoco'
 }
 
 apply from : '../constants.gradle'
+
+jacoco { toolVersion = '0.8.8' }
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+    jacoco.excludes = ['jdk.internal.*']
+}
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled(true)
+        html.enabled(true)
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
+    def debugTree = fileTree(
+            dir: "${buildDir}/intermediates/javac/debug/classes",
+            excludes: fileFilter
+    )
+    def kotlinDebugTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "$project.projectDir/src/main/java"
+
+    sourceDirectories.from = files([mainSrc])
+    classDirectories.from = files([debugTree], [kotlinDebugTree])
+    executionData.from = fileTree(dir: "${buildDir}/outputs", includes: [
+            'unit_test_code_coverage/debugUnitTest/testDebugUnitTest.exec',
+            'code_coverage/debugAndroidTest/connected/*/coverage.ec'
+    ])
+}
 
 android {
     namespace 'org.n27.tado'
